@@ -94,7 +94,7 @@ namespace Icons
     extern Icon toolbarVolumeLowIcon;
     extern Icon toolbarVolumeMediumIcon;
     extern Icon toolbarVolumeHighIcon;
-    #ifdef PHONON_FOUND
+    #ifdef ENABLE_HTTP_STREAM_PLAYBACK
     extern Icon toolbarStreamIcon;
     #endif
 }
